fix: fix bug with z-indexes of calendar weekly elements

--- a/react/src/styles/calendar/calendar-weekly.css
+++ b/react/src/styles/calendar/calendar-weekly.css
@@ -83,12 +83,18 @@
   display: flex;
   flex-direction: row;
 }
+.tasks-list .tooltip-container{
+  margin-top: 3px;
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+}
 .calendar-weekly__time-cell {
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   padding: 30px;
   flex-grow: 1;
   position: relative;
-  z-index: 0;
+  /* z-index: 0; */
 }
 
 .clicked-new-task-tooltip {
@@ -117,9 +123,9 @@
 .calendar-weekly__time-cell .tasks-list .tooltip-container{
   position: relative;
 }
-.calendar-weekly__time-cell .tasks-list .tooltip-container{
+/* .calendar-weekly__time-cell .tasks-list .tooltip-container{
   position: relative;
-}
+} */
 .calendar-weekly__time-cell .tasks-list .task-option {
   position: absolute;
   background-color: rgb(0 255 149 / 96%);
@@ -130,7 +136,7 @@
   top: -100px;
   left: -32px;
   right: -21px;
-  z-index: 0.3;
+  z-index: 1;
 }
 
 .task-period-background {
