--- a/react/src/styles/tooltip.css
+++ b/react/src/styles/tooltip.css
@@ -15,7 +15,7 @@
   white-space: nowrap;
   font-size: 14px;
   opacity: 0.9;
-  z-index: 4;
+  z-index: 8;
 }
 .tooltip-right {
 	top: 110%;
@@ -30,7 +30,7 @@
 	top: 50%;
 	left: 200%;
   transform: translateX(-50%);
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 5px 10px 20px 5px rgba(0, 0, 0, 0.411) ;
   color: #000;
   padding: 15px 20px 15px 20px;
@@ -39,7 +39,7 @@
   white-space: nowrap;
   font-size: 14px;
   opacity: 1;
-  z-index: 1;
+  z-index: 4;
 }
 .tooltip-task-dates {
   margin-left: 23px;
